update footer in every page, fix responsive issues

--- a/travel.html
+++ b/travel.html
@@ -20,13 +20,6 @@
     <link href="assets/css/main.css" rel="stylesheet">
 
     <style>
-        .travel-card {
-            background: #ffffff;
-            border-radius: 12px;
-            padding: 35px;
-            box-shadow: 0 4px 25px rgba(0, 0, 0, 0.08);
-        }
-
         .travel-section h3 {
             margin-top: 40px;
             margin-bottom: 15px;
@@ -224,7 +217,8 @@
                     <p>
                         The health and safety of all delegates is a top priority. Sri Lanka is generally a safe
                         destination, but visitors are encouraged to take standard precautions.
-                        Delegates are encouraged to <strong>consult their healthcare provider</strong>  before travel and to carry
+                        Delegates are encouraged to <strong>consult their healthcare provider</strong> before travel and
+                        to carry
                         necessary medications.
                     </p>
 
@@ -238,6 +232,7 @@
 
     <!-- Footer -->
     <footer id="footer" class="footer dark-background">
+
         <div class="footer-top">
             <div class="container">
                 <div class="row gy-4">
@@ -246,11 +241,12 @@
                             <span class="sitename">APSC 2026</span>
                         </a>
                         <div class="footer-contact pt-3">
-                            <p>Colombo, Sri Lanka</p>
-                            <p><strong>Email:</strong> apsc2026.secretariat@gmail.com</p>
+                            <p> Bandaranaike Memorial International Conference Hall</p>
+                            <p>26th - 28th November</p>
                         </div>
                     </div>
 
+                    <!-- Quick Links -->
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Quick Links</h4>
                         <ul>
@@ -262,11 +258,16 @@
                         </ul>
                     </div>
 
+                    <!-- Contact -->
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
-                        <p><i class="bi bi-geo-alt me-2"></i>Colombo, Sri Lanka</p>
+                        <p><i class="bi bi-geo-alt me-2"></i>Wijerama House,
+                            06. Wijerama Mawatha,
+                            Colombo 7 Sri Lanka</p>
                         <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -274,14 +275,30 @@
         <div class="copyright text-center">
             <div
                 class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
+
                 <div class="d-flex flex-column align-items-center align-items-lg-start">
-                    <div>© Copyright <strong>APSC 2026</strong>. All Rights Reserved</div>
+                    <div>
+                        © Copyright <strong><span>apsc2026</span></strong>. All Rights Reserved
+                    </div>
                     <div class="credits">
+                        <!-- All the links in the footer should remain intact. -->
+                        <!-- You can delete the links only if you purchased the pro version. -->
+                        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
                         Designed by <a href="https://portfolio-rouge-six-72.vercel.app/" target="_blank">Tharinxdu</a>
                     </div>
                 </div>
+
+                <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+          <a href=""><i class="bi bi-twitter-x"></i></a>
+          <a href=""><i class="bi bi-facebook"></i></a>
+          <a href=""><i class="bi bi-instagram"></i></a>
+          <a href=""><i class="bi bi-linkedin"></i></a>
+        </div> -->
+
             </div>
         </div>
+
     </footer>
 
     <!-- Scripts -->
