--- a/abstract-guidelines.html
+++ b/abstract-guidelines.html
@@ -222,54 +222,74 @@
 
     <!-- Footer (unchanged) -->
     <footer id="footer" class="footer dark-background">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row gy-4">
 
-                    <div class="col-lg-4 col-md-6 footer-about">
-                        <a href="index.html" class="logo d-flex align-items-center">
-                            <span class="sitename">APSC 2026</span>
-                        </a>
-                        <div class="footer-contact pt-3">
-                            <p>Colombo</p>
-                            <p>Sri Lanka</p>
-                            <p><strong>Email:</strong> apsc2026.secretariat@gmail.com</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Quick Links</h4>
-                        <ul>
-                            <li><a href="index.html#hero">Home</a></li>
-                            <li><a href="index.html#key-info">Key Information</a></li>
-                            <li><a href="index.html#culture-gallery">Gallery</a></li>
-                            <li><a href="index.html#highlights">Highlights</a></li>
-                            <li><a href="index.html#"="">Contact</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h4>Contact Us</h4>
-                        <p><i class="bi bi-geo-alt me-2"></i>Colombo, Sri Lanka</p>
-                        <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
-                    </div>
-
-                </div>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row gy-4">
+          <div class="col-lg-4 col-md-6 footer-about">
+            <a href="index.html" class="logo d-flex align-items-center">
+              <span class="sitename">APSC 2026</span>
+            </a>
+            <div class="footer-contact pt-3">
+              <p> Bandaranaike Memorial International Conference Hall</p>
+              <p>26th - 28th November</p>
             </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="index.html#hero">Home</a></li>
+              <li><a href="index.html#key-info">Key Information</a></li>
+              <li><a href="index.html#culture-gallery">Gallery</a></li>
+              <li><a href="index.html#highlights">Highlights</a></li>
+              <li><a href="index.html#contact">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- Contact -->
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h4>Contact Us</h4>
+            <p><i class="bi bi-geo-alt me-2"></i>Wijerama House,
+              06. Wijerama Mawatha,
+              Colombo 7 Sri Lanka</p>
+            <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+    <div class="copyright text-center">
+      <div
+        class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
+
+        <div class="d-flex flex-column align-items-center align-items-lg-start">
+          <div>
+            © Copyright <strong><span>apsc2026</span></strong>. All Rights Reserved
+          </div>
+          <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
+            Designed by <a href="https://portfolio-rouge-six-72.vercel.app/" target="_blank">Tharinxdu</a>
+          </div>
         </div>
 
-        <div class="copyright text-center">
-            <div
-                class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
-                <div class="d-flex flex-column align-items-center align-items-lg-start">
-                    <div>© Copyright <strong><span>APSC 2026</span></strong>. All Rights Reserved</div>
-                    <div class="credits">
-                        Designed by <a href="https://portfolio-rouge-six-72.vercel.app/" target="_blank">Tharinxdu</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+        <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+          <a href=""><i class="bi bi-twitter-x"></i></a>
+          <a href=""><i class="bi bi-facebook"></i></a>
+          <a href=""><i class="bi bi-instagram"></i></a>
+          <a href=""><i class="bi bi-linkedin"></i></a>
+        </div> -->
+
+      </div>
+    </div>
+
+  </footer>
 
 
     <!-- Scripts -->
