--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="" class="logo d-flex align-items-center me-auto">
         <img src="assets/img/APSO Logo.png" alt="">
         <img src="assets/img/ASN Logo.png" alt="">
         <img src="assets/img/NSASL Logo.png" alt="">
@@ -61,7 +61,7 @@
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="./registration-guidelines.html" class="active">Registration<br></a></li>
           <li><a href="./abstract-guidelines.html" class="active">Abstract<br></a></li>
-          <li><a href="#hero" class="active">Scientific Program<br></a></li>
+          <li><a href="#program" class="active">Scientific Program<br></a></li>
           <li class="dropdown">
             <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -101,7 +101,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
+      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+        now</a>
 
     </div>
   </header>
@@ -110,47 +111,34 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-
       <img src="assets/img/caraousal4.png" alt="" data-aos="fade-in" class="">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ASIA PACIFIC<br>STROKE CONFERENCE <span>2026</span>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">
+          THE ASIA PACIFIC<br>STROKE CONFERENCE <span>2026</span>
         </h2>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-save-label">Save the date</p>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-save-date">26-28 November 2026</p>
-        <!-- <div data-aos="fade-up" data-aos-delay="300" class="">
-          <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
-        </div> -->
+
+        <!-- Updated: Venue pill + date line
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-label">Venue</p> -->
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-name">
+          Bandaranaike Memorial International Conference Hall
+        </p>
+
+        <p data-aos="fade-up" data-aos-delay="250" class="hero-date">
+          26–28 November 2026
+        </p>
+
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
-          <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register" target="_blank">Register Now</a>
+          <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register" target="_blank">Register
+            Now</a>
           <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract" target="_blank">Submit Abstract</a>
         </div>
       </div>
 
-      <div class=" mt-auto position-relative">
+      <div class="mt-auto position-relative"></div>
+    </section>
 
-        <!-- <div class="container position-relative" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-6">
-              <h2>About The Event</h2>
-              <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-                accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-                est ut optio sequi unde.</p>
-            </div>
-            <div class="col-lg-3">
-              <h3>Where</h3>
-              <p>Downtown Conference Center, New York</p>
-            </div>
-            <div class="col-lg-3">
-              <h3>When</h3>
-              <p>Monday to Wednesday<br>10-12 December</p>
-            </div>
-          </div>
-        </div> -->
-      </div>
-
-    </section><!-- /Hero Section -->
 
 
     <!-- President Modal -->
@@ -302,7 +290,7 @@
               </div>
               <h4>Program at a glance</h4>
               <p>26–28 November 2026<br>BMICH, Colombo, Sri Lanka</p>
-              <a href="#venue" class="read-more">More <i class="bi bi-arrow-right"></i></a>
+              <a href="#venue" class="btn-read-more">More</a>
             </div>
           </div>
 
@@ -314,7 +302,7 @@
               </div>
               <h4>Registration Information</h4>
               <p>Early Bird, Regular, Late & Onsite registration categories available.</p>
-              <a href="registration-guidelines.html" class="read-more">More <i class="bi bi-arrow-right"></i></a>
+              <a href="registration-guidelines.html" class="btn-read-more">More</a>
             </div>
           </div>
 
@@ -326,7 +314,7 @@
               </div>
               <h4>Abstract Information</h4>
               <p>Submit your abstract before the deadline to share your research at APSC 2026.</p>
-              <a href="abstract-guidelines.html" class="read-more">More<i class="bi bi-arrow-right"></i></a>
+              <a href="abstract-guidelines.html" class="btn-read-more">More</a>
             </div>
           </div>
 
@@ -338,8 +326,8 @@
               </div>
               <h4>Explore Sri Lanka</h4>
               <p>Plan your trip, discover destinations, and travel tips for Sri Lanka.</p>
-              <a href="https://www.sltda.gov.lk/en" class="read-more" target="_blank" rel="noopener noreferrer">
-                Visit <i class="bi bi-arrow-right"></i>
+              <a href="https://www.sltda.gov.lk/en" class="btn-read-more" target="_blank" rel="noopener noreferrer">
+                More
               </a>
             </div>
           </div>
@@ -1216,8 +1204,8 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
               data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
-              <h3>Address</h3>
-              <p>Colombo, Sri Lanka</p>
+              <h3>Venue</h3>
+              <p>Bandaranaike Memorial International Conference Hall</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -1302,10 +1290,8 @@
               <span class="sitename">APSC 2026</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>Colombo</p>
-              <p>Sri Lanka</p>
-              <!-- <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p> -->
-              <p><strong>Email:</strong> <span>apsc2026.secretariat@gmail.com</span></p>
+              <p> Bandaranaike Memorial International Conference Hall</p>
+              <p>26th - 28th November</p>
             </div>
           </div>
 
@@ -1324,7 +1310,9 @@
           <!-- Contact -->
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
-            <p><i class="bi bi-geo-alt me-2"></i>Colombo, Sri Lanka</p>
+            <p><i class="bi bi-geo-alt me-2"></i>Wijerama House,
+              06. Wijerama Mawatha,
+              Colombo 7 Sri Lanka</p>
             <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
           </div>
 
