update the pages

--- a/abstract-guidelines.html
+++ b/abstract-guidelines.html
@@ -28,11 +28,23 @@
     <header id="header" class="header d-flex align-items-center fixed-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto">
-                <img src="assets/img/APSO Logo.png" alt="">
-                <img src="assets/img/ASN Logo.png" alt="">
-                <img src="assets/img/NSASL Logo.png" alt="">
-            </a>
+            <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/APSO Logo.png" alt="">
+        <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
+        <img src="assets/img/NSASL Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
+
+      <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/ASN Logo.png" alt="">
+        <img src="assets/img/AON.jpeg" alt="">
+        <img src="assets/img/SLCEP Logo.png" alt="">
+        <img src="assets/img/CCP Logo.jpeg" alt="">
+        <img src="assets/img/SSOS Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
@@ -55,8 +67,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
-                now</a>
+            <!-- <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a> -->
         </div>
     </header>
 
@@ -88,8 +100,8 @@
 
                     <table class="dates-table table">
                         <tr>
-                            <th>Milestone</th>
-                            <th>Date</th>
+                            <th></th>
+                            <th></th>
                         </tr>
                         <tr>
                             <td>Abstract Submission Opens</td>
@@ -97,20 +109,14 @@
                         </tr>
                         <tr>
                             <td>Abstract Submission Deadline</td>
-                            <td><strong>30th June 2026</strong></td>
+                            <td>15th June 2026</td>
                         </tr>
                         <tr>
                             <td>Notification of Acceptance</td>
-                            <td>31st August 2026</td>
-                        </tr>
-                        <tr>
-                            <td>Early Bird Registration Deadline</td>
-                            <td>30th September 2026</td>
+                            <td>15th August 2026</td>
                         </tr>
                     </table>
 
-                    <p>Please note that Late Breaking Abstract Submission Deadline is 31st July 2026.
-                    </p>
 
 
                     <hr class="my-4">
@@ -181,18 +187,18 @@
                     <p>Each abstract should include the following components:</p>
                     <p><strong>For research submission</strong></p>
                     <ul>
-                        <li><strong>Background / Purpose:</strong> A brief statement outlining the objective or rationale of the study.</li>
-                        <li><strong>Methods:</strong> A concise description of the methods used.</li>
-                        <li><strong>Results:</strong> A summary of key findings presented in sufficient detail to support the conclusions.</li>
-                        <li><strong>Conclusions:</strong> The main conclusions derived from the study.</li>
+                        <li>Background / Purpose: A brief statement outlining the objective or rationale of the study.</li>
+                        <li>Methods: A concise description of the methods used.</li>
+                        <li>Results: A summary of key findings presented in sufficient detail to support the conclusions.</li>
+                        <li>Conclusions: The main conclusions derived from the study.</li>
                     </ul>
 
                     <p><strong>For case report submission</strong></p>
                     <ul>
-                        <li><strong>Background / Introduction:</strong> A brief outline of the case context and its relevance or significance.</li>
-                        <li><strong>Case Presentation:</strong> A concise description of the patient’s presentation, clinical findings, investigations, and management.</li>
-                        <li><strong>Discussion:</strong> Highlight the unique or educational aspects of the case, including its implications for clinical practice or lessons learned.</li>
-                        <li><strong>Conclusion:</strong> The main takeaway message or key learning point from the case.</li>
+                        <li>Background / Introduction: A brief outline of the case context and its relevance or significance.</li>
+                        <li>Case Presentation: A concise description of the patient’s presentation, clinical findings, investigations, and management.</li>
+                        <li>Discussion: Highlight the unique or educational aspects of the case, including its implications for clinical practice or lessons learned.</li>
+                        <li>Conclusion: The main takeaway message or key learning point from the case.</li>
                     </ul>
 
                     <hr class="my-4">
@@ -211,6 +217,13 @@
                             </ul>
                         </li>
                     </ul>
+
+                    <hr class="my-4">
+
+                    <!-- BUTTON -->
+                    <div class="text-center mt-4">
+                        <a href="https://portal.apsc2026.lk/registration" class="register-btn" target="_blank">Submit Your Abstract</a>
+                    </div>
 
                 </div>
 
@@ -231,8 +244,8 @@
               <span class="sitename">APSC 2026</span>
             </a>
             <div class="footer-contact pt-3">
-              <p> Bandaranaike Memorial International Conference Hall</p>
-              <p>26th - 28th November</p>
+              <p> Venue: BMICH <br>(Bandaranaike Memorial International Conference Hall)</p>
+              <p>26th - 28th November 2026</p>
             </div>
           </div>
 
