--- a/index.html
+++ b/index.html
@@ -50,8 +50,18 @@
 
       <a href="" class="logo d-flex align-items-center me-auto">
         <img src="assets/img/APSO Logo.png" alt="">
-        <img src="assets/img/ASN Logo.png" alt="">
+        <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
         <img src="assets/img/NSASL Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
+
+      <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/ASN Logo.png" alt="">
+        <img src="assets/img/AON.jpeg" alt="">
+        <img src="assets/img/SLCEP Logo.png" alt="">
+        <img src="assets/img/CCP Logo.jpeg" alt="">
+        <img src="assets/img/SSOS Logo.png" alt="">
         <!-- Uncomment the line below if you also wish to use an text logo -->
         <!-- <h1 class="sitename">TheEvent</h1>  -->
       </a>
@@ -101,32 +111,40 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
-        now</a>
+      <!-- <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+        now</a> -->
 
     </div>
   </header>
 
   <main class="main">
 
-    <!-- Hero Section -->
+    <!-- HERO (UPDATED FULL HTML) -->
     <section id="hero" class="hero section dark-background">
       <img src="assets/img/caraousal4.png" alt="" data-aos="fade-in" class="">
 
+
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">
-          THE ASIA PACIFIC<br>STROKE CONFERENCE <span>2026</span>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="hero-title-short">
+          APSC <span>2026</span>
         </h2>
 
-        <!-- Updated: Venue pill + date line
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-label">Venue</p> -->
+
+        <h2 data-aos="fade-up" data-aos-delay="100" class="hero-title-long">
+          THE ASIA PACIFIC<br>STROKE CONFERENCE 
+        </h2>
+
+
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-name">Venue: BMICH</p>
         <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-name">
-          Bandaranaike Memorial International Conference Hall
+          (Bandaranaike Memorial International Conference Hall)
         </p>
+
 
         <p data-aos="fade-up" data-aos-delay="250" class="hero-date">
           26–28 November 2026
         </p>
+
 
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
@@ -135,6 +153,7 @@
           <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract" target="_blank">Submit Abstract</a>
         </div>
       </div>
+
 
       <div class="mt-auto position-relative"></div>
     </section>
@@ -1205,7 +1224,7 @@
               data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
               <h3>Venue</h3>
-              <p>Bandaranaike Memorial International Conference Hall</p>
+              <p>BMICH (Bandaranaike Memorial International Conference Hall)</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -1233,10 +1252,16 @@
         <div class="row gy-4 mt-1">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.163628545633!2d79.86108177500328!3d6.920719893071803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25979bfe9c3f1%3A0xe7b9c2e36dc68f65!2sBMICH%20(Bandaranaike%20Memorial%20International%20Conference%20Hall)!5e0!3m2!1sen!2slk!4v1736358239271!5m2!1sen!2slk"
-              frameborder="0" style="border:0; width: 100%; height: 400px;" allowfullscreen="" loading="lazy"
+              src="https://www.google.com/maps?output=embed&q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka&z=17"
+              width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"
               referrerpolicy="no-referrer-when-downgrade">
             </iframe>
+
+            <!-- Optional: lets users open it in Google Maps -->
+            <a href="https://www.google.com/maps?q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka"
+              target="_blank" rel="noopener" style="display:inline-block; margin-top:8px;">
+              View on Google Maps
+            </a>
           </div>
 
           <div class="col-lg-6">
@@ -1290,8 +1315,8 @@
               <span class="sitename">APSC 2026</span>
             </a>
             <div class="footer-contact pt-3">
-              <p> Bandaranaike Memorial International Conference Hall</p>
-              <p>26th - 28th November</p>
+              <p> Venue: BMICH <br>(Bandaranaike Memorial International Conference Hall)</p>
+              <p>26th - 28th November 2026</p>
             </div>
           </div>
 
