--- a/travel.html
+++ b/travel.html
@@ -44,11 +44,23 @@
     <header id="header" class="header d-flex align-items-center fixed-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto">
-                <img src="assets/img/APSO Logo.png" alt="">
-                <img src="assets/img/ASN Logo.png" alt="">
-                <img src="assets/img/NSASL Logo.png" alt="">
-            </a>
+            <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/APSO Logo.png" alt="">
+        <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
+        <img src="assets/img/NSASL Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
+
+      <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/ASN Logo.png" alt="">
+        <img src="assets/img/AON.jpeg" alt="">
+        <img src="assets/img/SLCEP Logo.png" alt="">
+        <img src="assets/img/CCP Logo.jpeg" alt="">
+        <img src="assets/img/SSOS Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
@@ -71,8 +83,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
-                now</a>
+            <!-- <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a> -->
 
         </div>
     </header>
@@ -93,24 +105,24 @@
         </section>
 
         <!-- TRAVEL CONTENT -->
-        <section class="section travel-section light-background">
+        <section class="section travel-section light-background ">
             <div class="container aos-init aos-animate" data-aos="fade-up">
 
-                <div class="travel-card">
+                <div class="travel-card p-4 p-md-5 shadow-sm rounded-3">
 
                     <!-- VISA -->
                     <h3><i class="bi bi-passport me-2 text-primary"></i>Visa Information</h3>
                     <p>
-                        All international delegates attending <strong>APSC 2026</strong> are required to obtain a valid
-                        <strong>visa</strong> or
-                        <strong>Electronic Travel Authorization (ETA)</strong> before entering Sri Lanka. The process is
+                        All international delegates attending APSC 2026 are required to obtain a valid
+                        visa or
+                        Electronic Travel Authorization (ETA) before entering Sri Lanka. The process is
                         straightforward
                         and can be completed entirely online through the official government portal.
                         We strongly recommend applying for the ETA well in advance to ensure smooth entry upon arrival.
                         Most travellers receive approval within a few days.
                     </p>
                     <p>
-                        For full details and to apply online, please visit the official Sri Lanka ETA website:<br>
+                        For full details and to apply online, please visit the official Sri Lanka ETA website:
                         <a href="https://www.eta.gov.lk" target="_blank"><strong>www.eta.gov.lk</strong></a>
                     </p>
 
@@ -118,14 +130,14 @@
 
                     <!-- TRANSPORT -->
                     <h3><i class="bi bi-taxi-front me-2 text-primary"></i>Transport from Airport to Colombo</h3>
-                    <p><strong>Bandaranaike International Airport (BIA)</strong> is approximately 30 km from Colombo,
+                    <p>Bandaranaike International Airport (BIA) is approximately 30 km from Colombo,
                         with a travel time
                         of around 45–60 minutes depending on traffic. Transport options for delegates include
-                        <strong>Airport
-                            Taxi Counters</strong> (Official taxi services available at the arrivals terminal). Many
+                        Airport
+                            Taxi Counters (Official taxi services available at the arrivals terminal). Many
                         hotels offer
                         airport pickups upon request.
-                        We recommend <strong>pre-booking transfers</strong> or using official airport counters for
+                        We recommend pre-booking transfers or using official airport counters for
                         convenience and safety
                     </p>
 
@@ -159,21 +171,21 @@
                     <!-- AIR TRAVEL -->
                     <h3><i class="bi bi-airplane me-2 text-primary"></i>Air Travel to Sri Lanka</h3>
                     <p>
-                        <strong>Bandaranaike International Airport (BIA)</strong>, located about 30 km north of Colombo,
+                        Bandaranaike International Airport (BIA), located about 30 km north of Colombo,
                         is Sri Lanka’s
                         main international gateway. The airport is well connected to major cities across Asia, the
                         Middle East, Europe, and Australia.
-                        Leading airlines flying to Colombo include <strong>Sri Lankan Airlines, Qatar Airways, Emirates,
-                            Singapore Airlines, Etihad Airways, Thai Airways,</strong> and <strong>Air India</strong>,
+                        Leading airlines flying to Colombo include Sri Lankan Airlines, Qatar Airways, Emirates,
+                            Singapore Airlines, Etihad Airways, Thai Airways, and Air India,
                         among others.
                     </p>
 
                     <p>Delegates are advised to:</p>
 
                     <ul>
-                        <li><strong>Book flights early</strong> due to high travel demand in November.</li>
-                        <li><strong>Check transit visa and entry requirements</strong> for connecting flights.</li>
-                        <li><strong>Confirm baggage allowances and travel insurance</strong> directly with the airline.
+                        <li>Book flights early due to high travel demand in November.</li>
+                        <li>Check transit visa and entry requirements for connecting flights.</li>
+                        <li>Confirm baggage allowances and travel insurance directly with the airline.
                         </li>
                     </ul>
 
@@ -187,17 +199,17 @@
                         attractions. From Colombo, delegates can explore destinations across the island, making their
                         visit both professionally and personally rewarding.</p>
 
-                    <p><strong>Highlights include:</strong></p>
+                    <p>Highlights include:</p>
                     <ul>
-                        <li><strong>Ancient Cities:</strong> Sigiriya, Anuradhapura, and Polonnaruwa — UNESCO World
+                        <li>Ancient Cities: Sigiriya, Anuradhapura, and Polonnaruwa — UNESCO World
                             Heritage sites.</li>
-                        <li><strong>Hill Country:</strong> Nuwara Eliya, Kandy, and Ella with tea plantations, cool
+                        <li>Hill Country: Nuwara Eliya, Kandy, and Ella with tea plantations, cool
                             climates, and scenic landscapes.</li>
-                        <li><strong>Beaches:</strong> Mirissa, Unawatuna, Bentota, and Trincomalee for golden sands and
+                        <li>Beaches: Mirissa, Unawatuna, Bentota, and Trincomalee for golden sands and
                             clear waters.</li>
-                        <li><strong>Wildlife & Nature:</strong> Yala, Udawalawe, and Horton Plains National Parks for
+                        <li>Wildlife & Nature: Yala, Udawalawe, and Horton Plains National Parks for
                             safaris and wildlife spotting.</li>
-                        <li><strong>Cultural Experiences:</strong> Traditional festivals, local crafts, and authentic
+                        <li>Cultural Experiences: Traditional festivals, local crafts, and authentic
                             Sri Lankan cuisine.</li>
                     </ul>
 
@@ -207,7 +219,7 @@
                     </p>
 
                     <p>For more information about travel destinations, tours, and tips, visit the official Sri Lanka
-                        tourism website:<br>
+                        tourism website:
                         <a href="https://www.srilanka.travel" target="_blank"><strong>www.srilanka.travel</strong></a>
                     </p>
                     <hr>
@@ -217,12 +229,11 @@
                     <p>
                         The health and safety of all delegates is a top priority. Sri Lanka is generally a safe
                         destination, but visitors are encouraged to take standard precautions.
-                        Delegates are encouraged to <strong>consult their healthcare provider</strong> before travel and
+                        Delegates are encouraged to consult their healthcare provider before travel and
                         to carry
                         necessary medications.
                     </p>
 
-                    <hr>
 
                 </div>
             </div>
@@ -241,8 +252,8 @@
                             <span class="sitename">APSC 2026</span>
                         </a>
                         <div class="footer-contact pt-3">
-                            <p> Bandaranaike Memorial International Conference Hall</p>
-                            <p>26th - 28th November</p>
+                            <p> Venue: BMICH <br>(Bandaranaike Memorial International Conference Hall)</p>
+                            <p>26th - 28th November 2026</p>
                         </div>
                     </div>
 
