--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,11 +26,23 @@
     <header id="header" class="header d-flex align-items-center fixed-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto">
-                <img src="assets/img/APSO Logo.png" alt="">
-                <img src="assets/img/ASN Logo.png" alt="">
-                <img src="assets/img/NSASL Logo.png" alt="">
-            </a>
+            <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/APSO Logo.png" alt="">
+        <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
+        <img src="assets/img/NSASL Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
+
+      <a href="" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/ASN Logo.png" alt="">
+        <img src="assets/img/AON.jpeg" alt="">
+        <img src="assets/img/SLCEP Logo.png" alt="">
+        <img src="assets/img/CCP Logo.jpeg" alt="">
+        <img src="assets/img/SSOS Logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an text logo -->
+        <!-- <h1 class="sitename">TheEvent</h1>  -->
+      </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
@@ -53,8 +65,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
-                now</a>
+            <!-- <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a> -->
 
         </div>
     </header>
@@ -241,8 +253,8 @@
               <span class="sitename">APSC 2026</span>
             </a>
             <div class="footer-contact pt-3">
-              <p> Bandaranaike Memorial International Conference Hall</p>
-              <p>26th - 28th November</p>
+              <p> Venue: BMICH <br>(Bandaranaike Memorial International Conference Hall)</p>
+              <p>26th - 28th November 2026</p>
             </div>
           </div>
 
